README cleanups